k8s/apps/testing/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"  # Correct placement of the ingressClassName
  rules:
  - host: "fisefint.fyksen.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  tls:
  - hosts:
    - "fisefint.fyksen.me"
    secretName: fisefint-fyksen-me-tls
